# AgentSEIR-VI

./: README.md  pyproject.toml  requirements.txt
agentseir_vi/api_client/: client.py
agentseir_vi/model/: base.py  scenarios.py  utils.py
notebooks/: InitialInvestigation.ipynb  helper.py
src/api_client/: client.py
src/model/: base.py  scenarios.py
